--- a/.github/workflows/check_late.yml
+++ b/.github/workflows/check_late.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Query GitHub Project issues
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GRAPH_QL_ACCESS_TOKEN }}
           script: |
             const projectId = "${{ vars.PROJECT_GITHUB_ID }}";
             const query = `
