--- a/.github/workflows/check_late.yml
+++ b/.github/workflows/check_late.yml
@@ -1,7 +1,7 @@
 name: Check issues linked to project
 
 on:
-  workflow_dispatch: # lancement manuel
+  workflow_dispatch:
   # schedule:
   #   - cron: '0 * * * *' # toutes les heures
 
@@ -9,12 +9,13 @@ jobs:
   check-project-issues:
     runs-on: ubuntu-latest
     steps:
-      - name: Query GitHub Project issues
+      - name: Query GitHub Project issues and Priority field
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GRAPH_QL_ACCESS_TOKEN }}
           script: |
             const projectId = "${{ vars.PROJECT_GITHUB_ID }}";
+
             const query = `
               query($projectId: ID!) {
                 node(id: $projectId) {
@@ -28,6 +29,18 @@ jobs:
                             state
                           }
                         }
+                        fieldValues(first: 10) {
+                          nodes {
+                            ... on ProjectV2ItemFieldSingleSelectValue {
+                              name
+                              field {
+                                ... on ProjectV2SingleSelectField {
+                                  name
+                                }
+                              }
+                            }
+                          }
+                        }
                       }
                     }
                   }
@@ -39,10 +52,15 @@ jobs:
               projectId: projectId
             });
 
-            console.log("Issues in project:");
+            console.log("Issues in project with Priority field:");
             for (const item of result.node.items.nodes) {
               if (item.content) {
-                console.log(`#${item.content.number} - ${item.content.title}`);
+                console.log(`#${item.content.number} - ${item.content.title} [${item.content.state}]`);
+                // Chercher le champ Priority
+                for (const field of item.fieldValues.nodes) {
+                  if (field.field && field.field.name === "Priority") {
+                    console.log(`   -> Priority: ${field.name}`);
+                  }
+                }
               }
             }
-
